src/maths_parser.output
Terminals unused in grammar

   T_EXPONENT
   T_BNOT
   T_NOT


State 126 conflicts: 1 shift/reduce
State 201 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROG

    2 PROG: PROG FUNDEC
    3     | FUNDEC
    4     | PROG G_DEC_ST
    5     | G_DEC_ST

    6 FUNDEC: TYPE T_VARIABLE T_LBRAC PARAM_LIST T_RBRAC T_LCURL SCOPE T_RCURL
    7       | TYPE T_VARIABLE T_LBRAC T_RBRAC T_LCURL SCOPE T_RCURL
    8       | TYPE T_VARIABLE T_LBRAC PARAM_LIST T_RBRAC T_SEMIC
    9       | TYPE T_VARIABLE T_LBRAC T_RBRAC T_SEMIC

   10 TYPE: T_INT
   11     | T_VOID
   12     | T_CHAR
   13     | T_SHORT
   14     | T_LONG
   15     | T_FLOAT
   16     | T_DOUBLE
   17     | T_SIGNED

   18 PARAM_LIST: PARAM_LIST T_COMMA TYPE T_VARIABLE
   19           | TYPE T_VARIABLE

   20 SCOPE: SCOPE STMT
   21      | STMT

   22 EXPR_ST: T_SEMIC
   23        | EXPR T_SEMIC

   24 EXPR: EXPR_ASSIGN

   25 EXPR_ASSIGN: EXPR_COND
   26            | T_VARIABLE T_ASSIGN EXPR_ASSIGN
   27            | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_ASSIGN EXPR_ASSIGN
   28            | T_VARIABLE T_ADDEQUAL EXPR_ASSIGN
   29            | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_ADDEQUAL EXPR_ASSIGN
   30            | T_VARIABLE T_SUBEQUAL EXPR_ASSIGN
   31            | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_SUBEQUAL EXPR_ASSIGN

   32 EXPR_COND: OR

   33 OR: AND
   34   | OR T_OR BOR

   35 AND: BOR
   36    | AND T_AND BOR

   37 BOR: BXOR
   38    | BOR T_BOR BXOR

   39 BXOR: BAND
   40     | BXOR T_BXOR BXOR

   41 BAND: EQUAL
   42     | BAND T_BAND EQUAL

   43 EQUAL: LESS
   44      | EQUAL T_EQUAL LESS
   45      | EQUAL T_NEQUAL LESS

   46 LESS: SHIFT
   47     | LESS T_LT SHIFT
   48     | LESS T_GT SHIFT
   49     | LESS T_LEQUAL SHIFT
   50     | LESS T_GEQUAL SHIFT

   51 SHIFT: ADD
   52      | SHIFT T_LSHIFT ADD
   53      | SHIFT T_RSHIFT ADD

   54 ADD: MUL
   55    | ADD T_PLUS MUL
   56    | ADD T_MINUS MUL

   57 MUL: UNARY
   58    | MUL T_TIMES UNARY
   59    | MUL T_DIVIDE UNARY
   60    | MUL T_MOD UNARY

   61 UNARY: POSTFIX
   62      | T_DECREM T_VARIABLE
   63      | T_DECREM T_VARIABLE T_LSBRAC EXPR T_RSBRAC
   64      | T_INCREM T_VARIABLE
   65      | T_INCREM T_VARIABLE T_LSBRAC EXPR T_RSBRAC

   66 POSTFIX: PRIMATIVE
   67        | T_VARIABLE T_INCREM
   68        | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_INCREM
   69        | T_VARIABLE T_DECREM
   70        | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_DECREM
   71        | T_VARIABLE T_LBRAC CALL_PARAM T_RBRAC
   72        | T_VARIABLE T_LBRAC T_RBRAC

   73 CALL_PARAM: CALL_PARAM T_COMMA EXPR
   74           | EXPR

   75 PRIMATIVE: T_VARIABLE
   76          | T_NUMBER
   77          | T_LBRAC EXPR T_RBRAC
   78          | T_VARIABLE T_LSBRAC EXPR T_RSBRAC

   79 STMT: JMP_ST
   80     | EXPR_ST
   81     | IF_ST
   82     | ITER_ST
   83     | NEW_SCOPE
   84     | DEC_ST

   85 JMP_ST: T_RETURN T_SEMIC
   86       | T_RETURN EXPR T_SEMIC
   87       | T_BREAK
   88       | T_CONTINUE

   89 IF_ST: T_IF T_LBRAC EXPR T_RBRAC STMT
   90      | T_IF T_LBRAC EXPR T_RBRAC STMT T_ELSE STMT
   91      | T_SWITCH T_LBRAC EXPR T_RBRAC STMT

   92 ITER_ST: T_WHILE T_LBRAC EXPR T_RBRAC STMT
   93        | T_DO STMT T_WHILE T_LBRAC EXPR T_RBRAC T_SEMIC
   94        | T_FOR T_LBRAC EXPR_ST EXPR_ST T_RBRAC STMT
   95        | T_FOR T_LBRAC EXPR_ST EXPR_ST EXPR T_RBRAC STMT

   96 NEW_SCOPE: T_LCURL SCOPE T_RCURL

   97 DEC_ST: TYPE DEC_LIST T_SEMIC

   98 DEC_LIST: VAR_DEC
   99         | DEC_LIST T_COMMA VAR_DEC

  100 VAR_DEC: T_VARIABLE T_ASSIGN T_LSBRAC EXPR T_RSBRAC
  101        | T_VARIABLE T_LSBRAC EXPR T_RSBRAC
  102        | T_VARIABLE T_LSBRAC T_RSBRAC
  103        | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_ASSIGN T_LCURL LIST T_RCURL
  104        | T_VARIABLE T_ASSIGN EXPR
  105        | T_VARIABLE

  106 LIST: PRIMATIVE
  107     | PRIMATIVE T_COMMA LIST

  108 G_DEC_ST: TYPE G_DEC_LIST T_SEMIC

  109 G_DEC_LIST: G_VAR_DEC
  110           | G_DEC_LIST T_COMMA G_VAR_DEC

  111 G_VAR_DEC: T_VARIABLE T_ASSIGN T_LSBRAC EXPR T_RSBRAC
  112          | T_VARIABLE T_LSBRAC EXPR T_RSBRAC
  113          | T_VARIABLE T_LSBRAC T_RSBRAC
  114          | T_VARIABLE T_ASSIGN EXPR
  115          | T_VARIABLE


Terminals, with rules where they appear

$end (0) 0
error (256)
T_TIMES (258) 58
T_DIVIDE (259) 59
T_PLUS (260) 55
T_MINUS (261) 56
T_EXPONENT (262)
T_LBRAC (263) 6 7 8 9 71 72 77 89 90 91 92 93 94 95
T_RBRAC (264) 6 7 8 9 71 72 77 89 90 91 92 93 94 95
T_LCURL (265) 6 7 96 103
T_RCURL (266) 6 7 96 103
T_LSBRAC (267) 27 29 31 63 65 68 70 78 100 101 102 103 111 112 113
T_RSBRAC (268) 27 29 31 63 65 68 70 78 100 101 102 103 111 112 113
T_NUMBER (269) 76
T_VARIABLE (270) 6 7 8 9 18 19 26 27 28 29 30 31 62 63 64 65 67 68
    69 70 71 72 75 78 100 101 102 103 104 105 111 112 113 114 115
T_SEMIC (271) 8 9 22 23 85 86 93 97 108
T_COMMA (272) 18 73 99 107 110
T_LSHIFT (273) 52
T_RSHIFT (274) 53
T_EQUAL (275) 44
T_NEQUAL (276) 45
T_GT (277) 48
T_LT (278) 47
T_LEQUAL (279) 49
T_GEQUAL (280) 50
T_ASSIGN (281) 26 27 100 103 104 111 114
T_BNOT (282)
T_NOT (283)
T_AND (284) 36
T_OR (285) 34
T_BAND (286) 42
T_BOR (287) 38
T_BXOR (288) 40
T_MOD (289) 60
T_ADDEQUAL (290) 28 29
T_SUBEQUAL (291) 30 31
T_INCREM (292) 64 65 67 68
T_DECREM (293) 62 63 69 70
T_WHILE (294) 92 93
T_DO (295) 93
T_IF (296) 89 90
T_ELSE (297) 90
T_FOR (298) 94 95
T_BREAK (299) 87
T_CONTINUE (300) 88
T_SWITCH (301) 91
T_INT (302) 10
T_VOID (303) 11
T_CHAR (304) 12
T_SHORT (305) 13
T_LONG (306) 14
T_FLOAT (307) 15
T_DOUBLE (308) 16
T_SIGNED (309) 17
T_RETURN (310) 85 86


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
ROOT (57)
    on left: 1, on right: 0
PROG (58)
    on left: 2 3 4 5, on right: 1 2 4
FUNDEC (59)
    on left: 6 7 8 9, on right: 2 3
TYPE (60)
    on left: 10 11 12 13 14 15 16 17, on right: 6 7 8 9 18 19 97 108
PARAM_LIST (61)
    on left: 18 19, on right: 6 8 18
SCOPE (62)
    on left: 20 21, on right: 6 7 20 96
EXPR_ST (63)
    on left: 22 23, on right: 80 94 95
EXPR (64)
    on left: 24, on right: 23 27 29 31 63 65 68 70 73 74 77 78 86 89
    90 91 92 93 95 100 101 103 104 111 112 114
EXPR_ASSIGN (65)
    on left: 25 26 27 28 29 30 31, on right: 24 26 27 28 29 30 31
EXPR_COND (66)
    on left: 32, on right: 25
OR (67)
    on left: 33 34, on right: 32 34
AND (68)
    on left: 35 36, on right: 33 36
BOR (69)
    on left: 37 38, on right: 34 35 36 38
BXOR (70)
    on left: 39 40, on right: 37 38 40
BAND (71)
    on left: 41 42, on right: 39 42
EQUAL (72)
    on left: 43 44 45, on right: 41 42 44 45
LESS (73)
    on left: 46 47 48 49 50, on right: 43 44 45 47 48 49 50
SHIFT (74)
    on left: 51 52 53, on right: 46 47 48 49 50 52 53
ADD (75)
    on left: 54 55 56, on right: 51 52 53 55 56
MUL (76)
    on left: 57 58 59 60, on right: 54 55 56 58 59 60
UNARY (77)
    on left: 61 62 63 64 65, on right: 57 58 59 60
POSTFIX (78)
    on left: 66 67 68 69 70 71 72, on right: 61
CALL_PARAM (79)
    on left: 73 74, on right: 71 73
PRIMATIVE (80)
    on left: 75 76 77 78, on right: 66 106 107
STMT (81)
    on left: 79 80 81 82 83 84, on right: 20 21 89 90 91 92 93 94 95
JMP_ST (82)
    on left: 85 86 87 88, on right: 79
IF_ST (83)
    on left: 89 90 91, on right: 81
ITER_ST (84)
    on left: 92 93 94 95, on right: 82
NEW_SCOPE (85)
    on left: 96, on right: 83
DEC_ST (86)
    on left: 97, on right: 84
DEC_LIST (87)
    on left: 98 99, on right: 97 99
VAR_DEC (88)
    on left: 100 101 102 103 104 105, on right: 98 99
LIST (89)
    on left: 106 107, on right: 103 107
G_DEC_ST (90)
    on left: 108, on right: 4 5
G_DEC_LIST (91)
    on left: 109 110, on right: 108 110
G_VAR_DEC (92)
    on left: 111 112 113 114 115, on right: 109 110


State 0

    0 $accept: . ROOT $end

    T_INT     shift, and go to state 1
    T_VOID    shift, and go to state 2
    T_CHAR    shift, and go to state 3
    T_SHORT   shift, and go to state 4
    T_LONG    shift, and go to state 5
    T_FLOAT   shift, and go to state 6
    T_DOUBLE  shift, and go to state 7
    T_SIGNED  shift, and go to state 8

    ROOT      go to state 9
    PROG      go to state 10
    FUNDEC    go to state 11
    TYPE      go to state 12
    G_DEC_ST  go to state 13


State 1

   10 TYPE: T_INT .

    $default  reduce using rule 10 (TYPE)


State 2

   11 TYPE: T_VOID .

    $default  reduce using rule 11 (TYPE)


State 3

   12 TYPE: T_CHAR .

    $default  reduce using rule 12 (TYPE)


State 4

   13 TYPE: T_SHORT .

    $default  reduce using rule 13 (TYPE)


State 5

   14 TYPE: T_LONG .

    $default  reduce using rule 14 (TYPE)


State 6

   15 TYPE: T_FLOAT .

    $default  reduce using rule 15 (TYPE)


State 7

   16 TYPE: T_DOUBLE .

    $default  reduce using rule 16 (TYPE)


State 8

   17 TYPE: T_SIGNED .

    $default  reduce using rule 17 (TYPE)


State 9

    0 $accept: ROOT . $end

    $end  shift, and go to state 14


State 10

    1 ROOT: PROG .
    2 PROG: PROG . FUNDEC
    4     | PROG . G_DEC_ST

    T_INT     shift, and go to state 1
    T_VOID    shift, and go to state 2
    T_CHAR    shift, and go to state 3
    T_SHORT   shift, and go to state 4
    T_LONG    shift, and go to state 5
    T_FLOAT   shift, and go to state 6
    T_DOUBLE  shift, and go to state 7
    T_SIGNED  shift, and go to state 8

    $default  reduce using rule 1 (ROOT)

    FUNDEC    go to state 15
    TYPE      go to state 12
    G_DEC_ST  go to state 16


State 11

    3 PROG: FUNDEC .

    $default  reduce using rule 3 (PROG)


State 12

    6 FUNDEC: TYPE . T_VARIABLE T_LBRAC PARAM_LIST T_RBRAC T_LCURL SCOPE T_RCURL
    7       | TYPE . T_VARIABLE T_LBRAC T_RBRAC T_LCURL SCOPE T_RCURL
    8       | TYPE . T_VARIABLE T_LBRAC PARAM_LIST T_RBRAC T_SEMIC
    9       | TYPE . T_VARIABLE T_LBRAC T_RBRAC T_SEMIC
  108 G_DEC_ST: TYPE . G_DEC_LIST T_SEMIC

    T_VARIABLE  shift, and go to state 17

    G_DEC_LIST  go to state 18
    G_VAR_DEC   go to state 19


State 13

    5 PROG: G_DEC_ST .

    $default  reduce using rule 5 (PROG)


State 14

    0 $accept: ROOT $end .

    $default  accept


State 15

    2 PROG: PROG FUNDEC .

    $default  reduce using rule 2 (PROG)


State 16

    4 PROG: PROG G_DEC_ST .

    $default  reduce using rule 4 (PROG)


State 17

    6 FUNDEC: TYPE T_VARIABLE . T_LBRAC PARAM_LIST T_RBRAC T_LCURL SCOPE T_RCURL
    7       | TYPE T_VARIABLE . T_LBRAC T_RBRAC T_LCURL SCOPE T_RCURL
    8       | TYPE T_VARIABLE . T_LBRAC PARAM_LIST T_RBRAC T_SEMIC
    9       | TYPE T_VARIABLE . T_LBRAC T_RBRAC T_SEMIC
  111 G_VAR_DEC: T_VARIABLE . T_ASSIGN T_LSBRAC EXPR T_RSBRAC
  112          | T_VARIABLE . T_LSBRAC EXPR T_RSBRAC
  113          | T_VARIABLE . T_LSBRAC T_RSBRAC
  114          | T_VARIABLE . T_ASSIGN EXPR
  115          | T_VARIABLE .

    T_LBRAC   shift, and go to state 20
    T_LSBRAC  shift, and go to state 21
    T_ASSIGN  shift, and go to state 22

    $default  reduce using rule 115 (G_VAR_DEC)


State 18

  108 G_DEC_ST: TYPE G_DEC_LIST . T_SEMIC
  110 G_DEC_LIST: G_DEC_LIST . T_COMMA G_VAR_DEC

    T_SEMIC  shift, and go to state 23
    T_COMMA  shift, and go to state 24


State 19

  109 G_DEC_LIST: G_VAR_DEC .

    $default  reduce using rule 109 (G_DEC_LIST)


State 20

    6 FUNDEC: TYPE T_VARIABLE T_LBRAC . PARAM_LIST T_RBRAC T_LCURL SCOPE T_RCURL
    7       | TYPE T_VARIABLE T_LBRAC . T_RBRAC T_LCURL SCOPE T_RCURL
    8       | TYPE T_VARIABLE T_LBRAC . PARAM_LIST T_RBRAC T_SEMIC
    9       | TYPE T_VARIABLE T_LBRAC . T_RBRAC T_SEMIC

    T_RBRAC   shift, and go to state 25
    T_INT     shift, and go to state 1
    T_VOID    shift, and go to state 2
    T_CHAR    shift, and go to state 3
    T_SHORT   shift, and go to state 4
    T_LONG    shift, and go to state 5
    T_FLOAT   shift, and go to state 6
    T_DOUBLE  shift, and go to state 7
    T_SIGNED  shift, and go to state 8

    TYPE        go to state 26
    PARAM_LIST  go to state 27


State 21

  112 G_VAR_DEC: T_VARIABLE T_LSBRAC . EXPR T_RSBRAC
  113          | T_VARIABLE T_LSBRAC . T_RSBRAC

    T_LBRAC     shift, and go to state 28
    T_RSBRAC    shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_VARIABLE  shift, and go to state 31
    T_INCREM    shift, and go to state 32
    T_DECREM    shift, and go to state 33

    EXPR         go to state 34
    EXPR_ASSIGN  go to state 35
    EXPR_COND    go to state 36
    OR           go to state 37
    AND          go to state 38
    BOR          go to state 39
    BXOR         go to state 40
    BAND         go to state 41
    EQUAL        go to state 42
    LESS         go to state 43
    SHIFT        go to state 44
    ADD          go to state 45
    MUL          go to state 46
    UNARY        go to state 47
    POSTFIX      go to state 48
    PRIMATIVE    go to state 49


State 22

  111 G_VAR_DEC: T_VARIABLE T_ASSIGN . T_LSBRAC EXPR T_RSBRAC
  114          | T_VARIABLE T_ASSIGN . EXPR

    T_LBRAC     shift, and go to state 28
    T_LSBRAC    shift, and go to state 50
    T_NUMBER    shift, and go to state 30
    T_VARIABLE  shift, and go to state 31
    T_INCREM    shift, and go to state 32
    T_DECREM    shift, and go to state 33

    EXPR         go to state 51
    EXPR_ASSIGN  go to state 35
    EXPR_COND    go to state 36
    OR           go to state 37
    AND          go to state 38
    BOR          go to state 39
    BXOR         go to state 40
    BAND         go to state 41
    EQUAL        go to state 42
    LESS         go to state 43
    SHIFT        go to state 44
    ADD          go to state 45
    MUL          go to state 46
    UNARY        go to state 47
    POSTFIX      go to state 48
    PRIMATIVE    go to state 49


State 23

  108 G_DEC_ST: TYPE G_DEC_LIST T_SEMIC .

    $default  reduce using rule 108 (G_DEC_ST)


State 24

  110 G_DEC_LIST: G_DEC_LIST T_COMMA . G_VAR_DEC

    T_VARIABLE  shift, and go to state 52

    G_VAR_DEC  go to state 53


State 25

    7 FUNDEC: TYPE T_VARIABLE T_LBRAC T_RBRAC . T_LCURL SCOPE T_RCURL
    9       | TYPE T_VARIABLE T_LBRAC T_RBRAC . T_SEMIC

    T_LCURL  shift, and go to state 54
    T_SEMIC  shift, and go to state 55


State 26

   19 PARAM_LIST: TYPE . T_VARIABLE

    T_VARIABLE  shift, and go to state 56


State 27

    6 FUNDEC: TYPE T_VARIABLE T_LBRAC PARAM_LIST . T_RBRAC T_LCURL SCOPE T_RCURL
    8       | TYPE T_VARIABLE T_LBRAC PARAM_LIST . T_RBRAC T_SEMIC
   18 PARAM_LIST: PARAM_LIST . T_COMMA TYPE T_VARIABLE

    T_RBRAC  shift, and go to state 57
    T_COMMA  shift, and go to state 58


State 28

   77 PRIMATIVE: T_LBRAC . EXPR T_RBRAC

    T_LBRAC     shift, and go to state 28
    T_NUMBER    shift, and go to state 30
    T_VARIABLE  shift, and go to state 31
    T_INCREM    shift, and go to state 32
    T_DECREM    shift, and go to state 33

    EXPR         go to state 59
    EXPR_ASSIGN  go to state 35
    EXPR_COND    go to state 36
    OR           go to state 37
    AND          go to state 38
    BOR          go to state 39
    BXOR         go to state 40
    BAND         go to state 41
    EQUAL        go to state 42
    LESS         go to state 43
    SHIFT        go to state 44
    ADD          go to state 45
    MUL          go to state 46
    UNARY        go to state 47
    POSTFIX      go to state 48
    PRIMATIVE    go to state 49


State 29

  113 G_VAR_DEC: T_VARIABLE T_LSBRAC T_RSBRAC .

    $default  reduce using rule 113 (G_VAR_DEC)


State 30

   76 PRIMATIVE: T_NUMBER .

    $default  reduce using rule 76 (PRIMATIVE)


State 31

   26 EXPR_ASSIGN: T_VARIABLE . T_ASSIGN EXPR_ASSIGN
   27            | T_VARIABLE . T_LSBRAC EXPR T_RSBRAC T_ASSIGN EXPR_ASSIGN
   28            | T_VARIABLE . T_ADDEQUAL EXPR_ASSIGN
   29            | T_VARIABLE . T_LSBRAC EXPR T_RSBRAC T_ADDEQUAL EXPR_ASSIGN
   30            | T_VARIABLE . T_SUBEQUAL EXPR_ASSIGN
   31            | T_VARIABLE . T_LSBRAC EXPR T_RSBRAC T_SUBEQUAL EXPR_ASSIGN
   67 POSTFIX: T_VARIABLE . T_INCREM
   68        | T_VARIABLE . T_LSBRAC EXPR T_RSBRAC T_INCREM
   69        | T_VARIABLE . T_DECREM
   70        | T_VARIABLE . T_LSBRAC EXPR T_RSBRAC T_DECREM
   71        | T_VARIABLE . T_LBRAC CALL_PARAM T_RBRAC
   72        | T_VARIABLE . T_LBRAC T_RBRAC
   75 PRIMATIVE: T_VARIABLE .
   78          | T_VARIABLE . T_LSBRAC EXPR T_RSBRAC

    T_LBRAC     shift, and go to state 60
    T_LSBRAC    shift, and go to state 61
    T_ASSIGN    shift, and go to state 62
    T_ADDEQUAL  shift, and go to state 63
    T_SUBEQUAL  shift, and go to state 64
    T_INCREM    shift, and go to state 65
    T_DECREM    shift, and go to state 66

    $default  reduce using rule 75 (PRIMATIVE)


State 32

   64 UNARY: T_INCREM . T_VARIABLE
   65      | T_INCREM . T_VARIABLE T_LSBRAC EXPR T_RSBRAC

    T_VARIABLE  shift, and go to state 67


State 33

   62 UNARY: T_DECREM . T_VARIABLE
   63      | T_DECREM . T_VARIABLE T_LSBRAC EXPR T_RSBRAC

    T_VARIABLE  shift, and go to state 68


State 34

  112 G_VAR_DEC: T_VARIABLE T_LSBRAC EXPR . T_RSBRAC

    T_RSBRAC  shift, and go to state 69


State 35

   24 EXPR: EXPR_ASSIGN .

    $default  reduce using rule 24 (EXPR)


State 36

   25 EXPR_ASSIGN: EXPR_COND .

    $default  reduce using rule 25 (EXPR_ASSIGN)


State 37

   32 EXPR_COND: OR .
   34 OR: OR . T_OR BOR

    T_OR  shift, and go to state 70

    $default  reduce using rule 32 (EXPR_COND)


State 38

   33 OR: AND .
   36 AND: AND . T_AND BOR

    T_AND  shift, and go to state 71

    $default  reduce using rule 33 (OR)


State 39

   35 AND: BOR .
   38 BOR: BOR . T_BOR BXOR

    T_BOR  shift, and go to state 72

    $default  reduce using rule 35 (AND)


State 40

   37 BOR: BXOR .
   40 BXOR: BXOR . T_BXOR BXOR

    T_BXOR  shift, and go to state 73

    $default  reduce using rule 37 (BOR)


State 41

   39 BXOR: BAND .
   42 BAND: BAND . T_BAND EQUAL

    T_BAND  shift, and go to state 74

    $default  reduce using rule 39 (BXOR)


State 42

   41 BAND: EQUAL .
   44 EQUAL: EQUAL . T_EQUAL LESS
   45      | EQUAL . T_NEQUAL LESS

    T_EQUAL   shift, and go to state 75
    T_NEQUAL  shift, and go to state 76

    $default  reduce using rule 41 (BAND)


State 43

   43 EQUAL: LESS .
   47 LESS: LESS . T_LT SHIFT
   48     | LESS . T_GT SHIFT
   49     | LESS . T_LEQUAL SHIFT
   50     | LESS . T_GEQUAL SHIFT

    T_GT      shift, and go to state 77
    T_LT      shift, and go to state 78
    T_LEQUAL  shift, and go to state 79
    T_GEQUAL  shift, and go to state 80

    $default  reduce using rule 43 (EQUAL)


State 44

   46 LESS: SHIFT .
   52 SHIFT: SHIFT . T_LSHIFT ADD
   53      | SHIFT . T_RSHIFT ADD

    T_LSHIFT  shift, and go to state 81
    T_RSHIFT  shift, and go to state 82

    $default  reduce using rule 46 (LESS)


State 45

   51 SHIFT: ADD .
   55 ADD: ADD . T_PLUS MUL
   56    | ADD . T_MINUS MUL

    T_PLUS   shift, and go to state 83
    T_MINUS  shift, and go to state 84

    $default  reduce using rule 51 (SHIFT)


State 46

   54 ADD: MUL .
   58 MUL: MUL . T_TIMES UNARY
   59    | MUL . T_DIVIDE UNARY
   60    | MUL . T_MOD UNARY

    T_TIMES   shift, and go to state 85
    T_DIVIDE  shift, and go to state 86
    T_MOD     shift, and go to state 87

    $default  reduce using rule 54 (ADD)


State 47

   57 MUL: UNARY .

    $default  reduce using rule 57 (MUL)


State 48

   61 UNARY: POSTFIX .

    $default  reduce using rule 61 (UNARY)


State 49

   66 POSTFIX: PRIMATIVE .

    $default  reduce using rule 66 (POSTFIX)


State 50

  111 G_VAR_DEC: T_VARIABLE T_ASSIGN T_LSBRAC . EXPR T_RSBRAC

    T_LBRAC     shift, and go to state 28
    T_NUMBER    shift, and go to state 30
    T_VARIABLE  shift, and go to state 31
    T_INCREM    shift, and go to state 32
    T_DECREM    shift, and go to state 33

    EXPR         go to state 88
    EXPR_ASSIGN  go to state 35
    EXPR_COND    go to state 36
    OR           go to state 37
    AND          go to state 38
    BOR          go to state 39
    BXOR         go to state 40
    BAND         go to state 41
    EQUAL        go to state 42
    LESS         go to state 43
    SHIFT        go to state 44
    ADD          go to state 45
    MUL          go to state 46
    UNARY        go to state 47
    POSTFIX      go to state 48
    PRIMATIVE    go to state 49


State 51

  114 G_VAR_DEC: T_VARIABLE T_ASSIGN EXPR .

    $default  reduce using rule 114 (G_VAR_DEC)


State 52

  111 G_VAR_DEC: T_VARIABLE . T_ASSIGN T_LSBRAC EXPR T_RSBRAC
  112          | T_VARIABLE . T_LSBRAC EXPR T_RSBRAC
  113          | T_VARIABLE . T_LSBRAC T_RSBRAC
  114          | T_VARIABLE . T_ASSIGN EXPR
  115          | T_VARIABLE .

    T_LSBRAC  shift, and go to state 21
    T_ASSIGN  shift, and go to state 22

    $default  reduce using rule 115 (G_VAR_DEC)


State 53

  110 G_DEC_LIST: G_DEC_LIST T_COMMA G_VAR_DEC .

    $default  reduce using rule 110 (G_DEC_LIST)


State 54

    7 FUNDEC: TYPE T_VARIABLE T_LBRAC T_RBRAC T_LCURL . SCOPE T_RCURL

    T_LBRAC     shift, and go to state 28
    T_LCURL     shift, and go to state 89
    T_NUMBER    shift, and go to state 30
    T_VARIABLE  shift, and go to state 31
    T_SEMIC     shift, and go to state 90
    T_INCREM    shift, and go to state 32
    T_DECREM    shift, and go to state 33
    T_WHILE     shift, and go to state 91
    T_DO        shift, and go to state 92
    T_IF        shift, and go to state 93
    T_FOR       shift, and go to state 94
    T_BREAK     shift, and go to state 95
    T_CONTINUE  shift, and go to state 96
    T_SWITCH    shift, and go to state 97
    T_INT       shift, and go to state 1
    T_VOID      shift, and go to state 2
    T_CHAR      shift, and go to state 3
    T_SHORT     shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_FLOAT     shift, and go to state 6
    T_DOUBLE    shift, and go to state 7
    T_SIGNED    shift, and go to state 8
    T_RETURN    shift, and go to state 98

    TYPE         go to state 99
    SCOPE        go to state 100
    EXPR_ST      go to state 101
    EXPR         go to state 102
    EXPR_ASSIGN  go to state 35
    EXPR_COND    go to state 36
    OR           go to state 37
    AND          go to state 38
    BOR          go to state 39
    BXOR         go to state 40
    BAND         go to state 41
    EQUAL        go to state 42
    LESS         go to state 43
    SHIFT        go to state 44
    ADD          go to state 45
    MUL          go to state 46
    UNARY        go to state 47
    POSTFIX      go to state 48
    PRIMATIVE    go to state 49
    STMT         go to state 103
    JMP_ST       go to state 104
    IF_ST        go to state 105
    ITER_ST      go to state 106
    NEW_SCOPE    go to state 107
    DEC_ST       go to state 108


State 55

    9 FUNDEC: TYPE T_VARIABLE T_LBRAC T_RBRAC T_SEMIC .

    $default  reduce using rule 9 (FUNDEC)


State 56

   19 PARAM_LIST: TYPE T_VARIABLE .

    $default  reduce using rule 19 (PARAM_LIST)


State 57

    6 FUNDEC: TYPE T_VARIABLE T_LBRAC PARAM_LIST T_RBRAC . T_LCURL SCOPE T_RCURL
    8       | TYPE T_VARIABLE T_LBRAC PARAM_LIST T_RBRAC . T_SEMIC

    T_LCURL  shift, and go to state 109
    T_SEMIC  shift, and go to state 110


State 58

   18 PARAM_LIST: PARAM_LIST T_COMMA . TYPE T_VARIABLE

    T_INT     shift, and go to state 1
    T_VOID    shift, and go to state 2
    T_CHAR    shift, and go to state 3
    T_SHORT   shift, and go to state 4
    T_LONG    shift, and go to state 5
    T_FLOAT   shift, and go to state 6
    T_DOUBLE  shift, and go to state 7
    T_SIGNED  shift, and go to state 8

    TYPE  go to state 111


State 59

   77 PRIMATIVE: T_LBRAC EXPR . T_RBRAC

    T_RBRAC  shift, and go to state 112


State 60

   71 POSTFIX: T_VARIABLE T_LBRAC . CALL_PARAM T_RBRAC
   72        | T_VARIABLE T_LBRAC . T_RBRAC

    T_LBRAC     shift, and go to state 28
    T_RBRAC     shift, and go to state 113
    T_NUMBER    shift, and go to state 30
    T_VARIABLE  shift, and go to state 31
    T_INCREM    shift, and go to state 32
    T_DECREM    shift, and go to state 33

    EXPR         go to state 114
    EXPR_ASSIGN  go to state 35
    EXPR_COND    go to state 36
    OR           go to state 37
    AND          go to state 38
    BOR          go to state 39
    BXOR         go to state 40
    BAND         go to state 41
    EQUAL        go to state 42
    LESS         go to state 43
    SHIFT        go to state 44
    ADD          go to state 45
    MUL          go to state 46
    UNARY        go to state 47
    POSTFIX      go to state 48
    CALL_PARAM   go to state 115
    PRIMATIVE    go to state 49


State 61

   27 EXPR_ASSIGN: T_VARIABLE T_LSBRAC . EXPR T_RSBRAC T_ASSIGN EXPR_ASSIGN
   29            | T_VARIABLE T_LSBRAC . EXPR T_RSBRAC T_ADDEQUAL EXPR_ASSIGN
   31            | T_VARIABLE T_LSBRAC . EXPR T_RSBRAC T_SUBEQUAL EXPR_ASSIGN
   68 POSTFIX: T_VARIABLE T_LSBRAC . EXPR T_RSBRAC T_INCREM
   70        | T_VARIABLE T_LSBRAC . EXPR T_RSBRAC T_DECREM
   78 PRIMATIVE: T_VARIABLE T_LSBRAC . EXPR T_RSBRAC

    T_LBRAC     shift, and go to state 28
    T_NUMBER    shift, and go to state 30
    T_VARIABLE  shift, and go to state 31
    T_INCREM    shift, and go to state 32
    T_DECREM    shift, and go to state 33

    EXPR         go to state 116
    EXPR_ASSIGN  go to state 35
    EXPR_COND    go to state 36
    OR           go to state 37
    AND          go to state 38
    BOR          go to state 39
    BXOR         go to state 40
    BAND         go to state 41
    EQUAL        go to state 42
    LESS         go to state 43
    SHIFT        go to state 44
    ADD          go to state 45
    MUL          go to state 46
    UNARY        go to state 47
    POSTFIX      go to state 48
    PRIMATIVE    go to state 49


State 62

   26 EXPR_ASSIGN: T_VARIABLE T_ASSIGN . EXPR_ASSIGN

    T_LBRAC     shift, and go to state 28
    T_NUMBER    shift, and go to state 30
    T_VARIABLE  shift, and go to state 31
    T_INCREM    shift, and go to state 32
    T_DECREM    shift, and go to state 33

    EXPR_ASSIGN  go to state 117
    EXPR_COND    go to state 36
    OR           go to state 37
    AND          go to state 38
    BOR          go to state 39
    BXOR         go to state 40
    BAND         go to state 41
    EQUAL        go to state 42
    LESS         go to state 43
    SHIFT        go to state 44
    ADD          go to state 45
    MUL          go to state 46
    UNARY        go to state 47
    POSTFIX      go to state 48
    PRIMATIVE    go to state 49


State 63

   28 EXPR_ASSIGN: T_VARIABLE T_ADDEQUAL . EXPR_ASSIGN

    T_LBRAC     shift, and go to state 28
    T_NUMBER    shift, and go to state 30
    T_VARIABLE  shift, and go to state 31
    T_INCREM    shift, and go to state 32
    T_DECREM    shift, and go to state 33
